# Test

./: .gitignore  Cluster  Installation_Software.txt  Neuro_tests  Nifti_hdr_orientation  README.md  R_studies  Randomise  docker  git.txt  hello.cxx  houses.csv  myclass.cxx  myclass.h  myclass.hpp  tempo.cxx
ITK_Filter/: CMakeLists.txt  TestFilter.cxx
ITK_Filter/Module/: itkEmptyFilter.h  itkEmptyFilter.hxx
LDDMM/: CMakeLists.txt  LDDMM.cxx
LDDMM/Modules/Filtering/DisplacementField/include/: itkBegLDDMM.h  itkBegLDDMM.hxx
LDDMM/Modules/Registration/RegistrationMethodsv4/include/: itkLargeDeformationDiffeomorphicMetricMapping.h  itkLargeDeformationDiffeomorphicMetricMapping.hxx
LDDMM/images/: C.fig  Grille.fig
LaTeX/BMLE/: bmle.tex
LaTeX/BMLE/Bibliography/: sample.bib
LaTeX/Diffeomorphism/: diffeomorphism.tex
LaTeX/Machine_learning/: Machine_learning.tex
LaTeX/Machine_learning/Bibliography/: sample.bib
LaTeX/Network/: network.tex
LaTeX/Neural_Network/: neural_network.tex
LaTeX/Neural_Network/Bibliography/: sample.bib
WMH_classification/: CMakeLists.txt  Classification.h  Classification_linear_regression.h  Classification_logistic_regression.h  Classification_sigmoid.h  MACCrossValidation.h  MACCrossValidation_k_folds.h  README.md  Subject.h  Thread_dispatching.h  WMH_classification.cxx
WMH_classification/data/: data_set.json  data_set.json~  script.sh
bmle/: BmleException.h  BmleGroup.h  BmleMakeITKImage.cxx  BmleMakeITKImage.h  BmleTools.h  CMakeLists.txt  ClassificationException.h  Load_csv.cxx  Load_csv.h  README.md  Subject.cxx  Subject.h  Thread_dispatching.h  bmle.cxx
bmle/BMLE/: BmleGroup.h  Load_csv.h  Subject.h  bmle.cpp
bmle/VB/GM/: VBGM.h  vbgm.cpp  vbgm_test.cpp
bmle/VB/HMM/: VBHMM.h  VBHMM_Subject.h  VBHMM_Subject_mapping.h  VBPosterior.h  vbhmm.cpp  vbhmm_projection.cpp  vbhmm_test.cpp
bmle/data/: ADNI_clusters.csv  Sim.train.data.seq.len.mu.08.csv  Sim.train.data.seq.len.mu.08_2.csv  Sim.train.data.seq.len.mu.08_medium1.csv  Sim.train.data.seq.len.mu.08_medium2.csv  Sim.train.data.seq.len.mu.08_medium5.csv  Sim.train.data.seq.len.mu.08_short.csv  example.csv  example1.csv  hhm.csv  hhm_2d.csv  hhm_2d_all.csv  hmm_all.csv  hmm_next.cxx  hmm_simu.cxx
bmle/mle/: mle.cpp  mle_load_csv.h  mle_run_in.h  mle_subject.h  run_in_subject.h
bmle/noVB/GM/: GM.h  gm.cpp  gm_test.cpp
bmle/noVB/HMM/: HMM.h  HMM_Subject.h  HMM_Subject_mapping.h  Posterior.h  hmm.cpp  hmm_test.cpp
bmle/noVB/LGSSM/: LGSSM.h  LGSSM_Subject.h  LGSSM_Subject_mapping.h  Posterior.h  lgssm.cpp  lgssm_test.cpp
bmle/notes/: BHMM.org
bmle/utils/: Exception.h  MakeITKImage.cxx  MakeITKImage.h  Thread_dispatching.h  Tools.h
bmle/utils/Algorithms/: Algorithm.h  Gradiant.cxx  Gradiant.h  Raphson.cxx  Raphson.h
bmle/utils/IO/: Command_line.h  Load_csv.h
bmle/utils/Optimizers/: ML_run_in.h  Maximum_likelihood.h  Optimizer.h  REML.h  REML_run_in.h
docker/: dockerfile
docker/Singularity/: Centos7-CUDA-8-imaging_core.def  Centos7-CUDA-imaging_core.def  Centos7-imaging_core.def  GPGPU-imaging_core.def  GPGPU-imaging_core_neuroimage.def  Jupyter.def  LaTeX_Definition.def  README.md  Rocky-8_IC-devel.def  Rocky-8_IC-neuro.def  Rocky-8_IC.def  Rocky-8_IC_gpu.def  fslinstaller.py  requirements.txt  requirements_2024-08-22.csv  requirements_P2_2021_06_29.txt  requirements_P3_2021_06_29.txt  requirements_P3_2022_04_06.txt  requirements_P3_2023_06_23.txt  write_into_image.sh
docker/images/: Docker  Dockerfile  Dockerfile_test
docker/images_neuroimages/: Docker  Dockerfile
nip/: CMakeLists.txt  NipException.h  NipMakeITKImage.cxx  NipMakeITKImage.h  PMA.h  PMA_cross_validation.h  PMA_tools.h  PMD.cxx  PMD.h  PMD_cross_validation.h  README.md  SPC.cxx  SPC.h  SPC_cross_validation.h  Subject.cxx  Subject.h  Subjects_mapping.cxx  Subjects_mapping.h  Thread_dispatching.h  nip.cxx
nip/UnitTests/: CMakeLists.txt  complex_test.cxx  data_simulation.cxx  simple_matrix.cxx  simple_matrix_cv.cxx
nip/data/: Z.csv  data_set.csv  data_set_short.csv  data_test.csv
